--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Coming Soon</title>
+<title>My birthday is Coming Soon !</title>
 <link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
 <script type="text/javascript" src="tools/jquery.min.js"></script> 
 <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Damion' rel='stylesheet' type='text/css'>
@@ -13,12 +13,11 @@
 <div class="black"></div>
 <div id="wrapper">
 	<div id="header">
-		<h1>Ego Café</h1>
-		<h2><strong class="sep-one"></strong>Better Beans. Better Coffee<strong class="sep-two"></strong></h2>
+		<h1>Fund my cake </h1>
+		<h2><strong class="sep-one"></strong>Help me get the best cake for my birthday.<strong class="sep-two"></strong></h2>
 	</div>
 	<div id="middle">
-		<p>A relaxed and contemporary cafe bar in the centre of Palm Beach
-Opening this <span>Valentine’s - 14th Feb 2014</span></p>
+		<p>Fund my cake that will be made by the expert at <span>www.creative-cake-design.com </span></p>
 	</div>
 	<div id="footer">
 		<div>
