--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2><strong class="sep-one"></strong>Help me get the best cake for my birthday.<strong class="sep-two"></strong></h2>
 	</div>
 	<div id="middle">
-		<p>Fund my cake that will be made by the expert at <span>www.creative-cake-design.com </span></p>
+		<p>Help design and Fund my cake that will be made by the expert at <span>www.creative-cake-design.com , Use #UnCakePourJF to give your view on the cake  to be made </span></p>
 	</div>
 	<div id="footer">
 		<div>
